# llmops-multi-agents

./: .dockerignore  .gitattributes  .gitignore  README.md
agents/orchestrator-agent/: __main__.py  app.py  prompt.py  requirements.txt
agents/rag-agent/: app.py
data/embeddings/: MOET_SoTay_ThucHanh_CTXH_TrongTruongHoc_vi.npz  MOET_UNICEF_SoTay_TuVan_TamLy_HS_PhoThong_vi_2022.npz  MOET_UNICEF_TaiLieu_TruyenThong_SKTT_HS_PhoThong_vi_2023.npz  UNICEF_BanTomTat_NghienCuu_YeuTo_TruongHoc_SKTT_VTN_vi_2021.npz  USSH_VaccineTinhThan_SoTay_ChamSoc_SKTT_SinhVien_vi.npz
data/metadata/: catalog.csv
jenkins/: cache-cleanup.sh  pipeline-config.groovy
src/: README.md  docker-compose-upsert.yml  docker-compose.embedding.yml  docker-compose.yml
src/01_preprocessing/: 01_extract_text.py  02_chunk_text.py  Dockerfile  README.md  requirements.txt
src/02_embedding/: 03_embedding.py  03b_upsert_qdrant.py  Dockerfile  README.md  requirements.txt  run_pipeline.py
src/agents/orchestrator-agent/: requirements.txt
src/context-retrieval/: .dockerignore  Dockerfile  app.py  pyproject.toml  test_api.py
src/deploy_embedding/: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml
src/indexing/: 01_extract_text.py  02_chunk_text.py  03_embed_and_store.py  test_qdrant_connection.py  test_single_file.py
src/preprocessing/: 01_extract_text.py  02_chunk_text.py  03_create_embeddings.py  README.md  requirements.txt
src/retrieval/: .dockerignore  Dockerfile  app.py  requirements.txt
test_scripts/: test_context_retrieval.py  test_embedding_server.py  test_integration.py
(+20 files in other folders)
