[tool.poetry]
name = "deploy_embedding"
version = "0.1.0"
description = "deploy embedding"
authors = ["Lê Khánh <khanhledsdh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
torch = { version = "2.8.0", source = "pytorch-cpu" }
transformers = "^4.55.3"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
numpy = "^2.3.2"
pydantic = "^2.0.0"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"